configured delivery on push to main

--- a/.github/workflows/fib-service.deliver.yaml
+++ b/.github/workflows/fib-service.deliver.yaml
@@ -1,9 +1,7 @@
 name: Deliver fib-service
 
 on:
-    workflow_run:
-        workflows: ['Build fib-service']
-        types: [completed]
+    push:
         branches:
             - 'main'
 
